2001-05-20  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/thumblayout.c: new file along with thumblayout.h. It creates
	a pseudo widget with a scrolling container for the thumbnails.
	Written to be "portable" to other projects. GAL has a similar
	widget, but since I want to keep compatibility with GTK+...

2001-05-15  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/callbcks.c (close_file_cb): this function was moved from
	fileopen.c to here.

	* src/fileopen.c (file_dlg_ok_cb): file_name was never freed.
	(file_dlg_ok_cb): deletion of fail_list and fail_reason_list
	                  (reminiscence from the past)
	

2001-05-10  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/gtkutils.c: treat all widgets as GtkWidget and not as their
	real type (GtkButton, ...).
	(win32gdk_window_set_transient_for): new function to really
	transientize our GdkWindow, waiting for a new version of GTK+ (>
	Dec 2000)...

	* src/ps_print.c (print_cb): when the printing system is
	unavailable, display an error dialog only once and still permit
	export to a ps file.

2001-05-08  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/ps_print.c (get_printers): lpc and lpstat are not hard-coded
	anymore. We use "ensure_commands" to test for and check the
	printing system sanity. This is a bit cleaner that before.

	* src/zoom.c (ti_zoomed_fax_page): unzooming requires y_pix_size
	too, if ever the fax resolution is low. The fact that we "zoom" is
	because new_width > width, but height was not taken into account,
	hence our problem displaying low-res images correctly.
	(put_pixel_rot_none_unzoom): in the same case as above, we may
	need to draw two pixels instead of one.

2001-05-06  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/callbcks.c (nextpage_cb): the actions callbacks don't check
	if a file is opened anymore since their widget are enabled or
	disabled as needed.

	* src/viewer.h (enum): ActionIndex is an enum to reference the
	"command widgets" (print, rotate, go to next, ...).
	